--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8080
 
+spring.security.user.name=mayank
+spring.security.user.password=1
 
 spring.datasource.url=jdbc:mysql://localhost:3306/student
 spring.datasource.username=root
